# backend-todos

./: ajustes manuales.txt  alembic.ini  database.py  main.py  pyproject.toml  requirements.txt  tatus
alembic/: env.py
alembic/versions/: 5a597a48f4c7_create_todos_table.py
