[tool.poetry]
name = "list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.9"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
pytest = "^8.3.4"
requests = "^2.32.3"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
